part3/1/k8s/manifests/ping-pong.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: myapp-namespace
  name: ping-pong-svc
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - port: 2348
      protocol: TCP
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myapp-namespace
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: deecaad/devopsk8s:part3-1-ping-pong-1
