part3/1/k8s/manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: myapp-namespace
  name: postgres-svc
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      name: web
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: myapp-namespace
  name: postgres
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - name: postgres
          image: postgres:17.0-alpine3.20
          ports:
            - name: web
              containerPort: 5342
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
